# weather_project1

./: README.md  db.sqlite3  pyproject.toml  test.md
weather/: models.py  services.py  urls.py  views.py
weather/templates/weather/: index.html  weather_table.html
weather_project/: settings.py  urls.py
